asegurando version estable de mi rama antes de fusionar main